# autocad-mcp-server

./: README.md  pyproject.toml  test_script.py
autocad_mcp/: server.py
