[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocad-com-mcp"
version = "1.0.0"
description = "AutoCAD MCP server using COM interface"
dependencies = [
    "mcp>=1.0.0",
    "pywin32>=306",
]

[project.scripts]
autocad-com-mcp = "autocad_mcp.server:main"